# uk-police-api

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  integration.yml  publish.yml
docs/: index.html
examples/: async_multi_area.py  knife_crime.py  neighbourhood_overview.py
tests/: conftest.py  test_availability.py  test_client.py  test_crimes.py  test_forces.py  test_models.py  test_neighbourhoods.py  test_postcodes.py  test_stop_search.py  test_utils.py
uk_police_api/: __init__.py  _client.py  exceptions.py  postcodes.py  utils.py
uk_police_api/models/: __init__.py  availability.py  common.py  crime.py  force.py  neighbourhood.py  stop_search.py
uk_police_api/resources/: availability.py  crimes.py  forces.py  neighbourhoods.py  stop_search.py
