[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uk-police-api"
version = "0.1.0"
description = "Python client for the UK Police Data API (data.police.uk)"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
    "ty>=0.0.1a7",
]

[project.urls]
Homepage = "https://github.com/fenneh/uk-police-api"
Repository = "https://github.com/fenneh/uk-police-api"

[tool.hatch.build.targets.wheel]
packages = ["uk_police_api"]

[tool.hatch.build.targets.sdist]
exclude = ["tests/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["integration: tests that hit the real data.police.uk API"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"
